2003-03-26  Larry Jones  <lawrence.jones@eds.com>

	* main.c (main): Use strtol() instead of atoi() when parsing -z
	to detect errors.
	(Reported by Eric Siegerman <erics@telepres.com>.)

2003-03-25  Derek Price  <derek@ximbiot.com>

	* cvs.h: Disable GNU attributes as part of PROTO behavior.
	* error.h: Mirror GNU attribute definitions from cvs.h.

2003-03-25  Derek Price  <derek@ximbiot.com>

	* subr.c (cvs_trace): #ifdef use of server_active.
	(Report from Jim Salter <jsalter@proofpoint.com>.)

	* cvs.h (xmalloc, xrealloc, xstrdup, parse_cvsroot,
	local_cvsroot, normalize_cvsroot): Use GNU attributes.
	* error.h (error_exit): Fix PROTO/__attribute__ specification.
	* root.c (new_cvsroot_t): Add GNU attribute.

2003-03-24  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notice.

	* Makefile.in: Regenerated.

2003-03-24  Larry Jones  <lawrence.jones@eds.com>

	* server.h (server_clear_template): Add declaration.
	(server_template): Add parameter names to prototype.

2003-03-20  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (env): Try more than one ps command if the first one
	fails. This may let the test succeed on more platforms. Also,
	keep the ps output that was processed for the error report.

2003-03-19  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (env): Use 'ps -el' rather than 'ps -l' so that
	crontab jobs that might be running these tests without a
	controlling terminal work properly.

	* client.c (start_rsh_server): Use new definition of RSH_DFLT to
	allow "rsh" to be configured to default to "ssh" or some other
	local remote transport program.

	* Makefile.in: Regenerated.

2003-03-19  Larry Jones  <lawrence.jones@eds.com>

	* filesubr.c (mkdir_if_needed): Save errno since isdir() can clobber.
	(Patch from Brian Poole <raj@cerias.purdue.edu>.)
	* sanity.sh (abspath-4): Update to match.

	* filesubr.c (locate_rcs): Fix gcc warning.

2003-03-19  Derek Price  <derek@ximbiot.com>
