@@ -1,3 +1,11 @@
+2003-03-26  Derek Price  <derek@ximbiot.com>
+
+	* main.c (main): Verify the argument to -z when running without
+	CLIENT_SUPPORT since Eric Siegerman complained about being bit
+	by a run of `cvs -z -n up' which parsed the -n as the argument to
+	-z.
+	* sanity.sh (opterrmsg): New tests for -z argument checking.
+
 2003-03-26  Larry Jones  <lawrence.jones@eds.com>
 
 	* main.c (main): Use strtol() instead of atoi() when parsing -z
